syntax = "proto3";

option java_package = "be.tapped.vlaamsetv.auth";
option java_multiple_files = true;

message TokenWrapperProto {
  string access_token = 1;
  string refresh_token = 2;
  int64 expiry = 3;
}
